# text-to-sql-AI-app

./: .env.sample  README.md  main.py  pyproject.toml
app/agents/: sql_agent.py
app/database/: mysql_client.py  schema.sql
app/utils/: data_gen.py
app/vector/: qdrant_client.py
scripts/: setup.py
